# top-github-vibe-coders

./: .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml
.github/workflows/: nomination-pipeline.yml
migrations/: 001_initial.sql
nominations/: TEMPLATE.toml
pipeline/: dagger.json  go.mod  go.sum  main.go
src/: auth.rs  config.rs  db.rs  github.rs  health.rs  leaderboard.rs  lib.rs  main.rs  models.rs  nominations.rs  rate_limit.rs  request_id.rs  voting.rs
static/: style.css
templates/: base.html  leaderboard.html  nominate.html
tests/: integration.rs
