[package]
name = "top-github-vibe-coders"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "trace", "catch-panic", "timeout", "compression-gzip"] }
askama = "0.12"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
libsql = "0.6"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
oauth2 = { version = "4.4", features = ["reqwest", "rustls-tls"] }
cookie = { version = "0.18", features = ["signed", "private"] }
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
rand = "0.8"
once_cell = "1"
moka = { version = "0.12", features = ["future"] }
wiremock = "0.6"
uuid = { version = "1", features = ["v4"] }
governor = "0.10.4"

